operator/pkg/model/ingestion/testdata/gateway/frontend_tls_no_frontend_config/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls: {}
