operator/pkg/model/ingestion/testdata/gateway/frontend_tls_no_frontend_config/output-listeners.yaml
- hostname: '*'
  name: https
  port: 443
  sources:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw
      namespace: default
      version: v1
